<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame" >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/set_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/default_record_mode"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <RelativeLayout
                android:id="@+id/record_detail"
                android:layout_below="@+id/set_default"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/record_detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/record_detail_content"
                    android:textSize="25dp"/>
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/record_width"
                    android:layout_below="@+id/record_detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/record_width"/>
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/record_height"
                    android:layout_below="@id/record_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/record_height"/>
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/record_density"
                    android:layout_below="@id/record_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/record_density"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
